Fix coordinates for selection handles when page_scale != 1

This CL revises the calculations used by the child frame touch selection
controller client when converting child-frame coordinates to the root
frame coord space. The old calculations failed to take into account
the page scale factor.

This CL also removes
RenderWidgetHostViewChildFrame::GetViewOriginInRoot(), which is now
obsolete.

Bug: 793363
Change-Id: I48766c396193b243d7336304bbf87734b5a41689
Reviewed-on: https://chromium-review.googlesource.com/820014
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: James MacLean <wjmaclean@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523625}
Former-commit-id: a7f4ab11cf9b65467aab860edc38e613d604b37d